# graft

./: Cargo.toml  README.md
future-plans/: 01-dev-server-management.md  02-change-tracking.md  03-full-stack-isolation.md  04-electron-gui-testing.md  05-claude-code-integration.md  06-macos-support.md
src/: cli.rs  collapse.rs  diff.rs  error.rs  lib.rs  main.rs  merge.rs  overlay.rs  proxy.rs  snap.rs  state.rs  tree.rs  util.rs  workspace.rs
src/commands/: collapse.rs  completions.rs  diff.rs  drop.rs  enter.rs  fork.rs  ls.rs  merge.rs  mod.rs  nuke.rs  path.rs  run.rs  snap.rs  switch.rs  tree.rs
tests/: collapse.rs  commands_misc.rs  diff.rs  enter.rs  fork_drop.rs  lifecycle.rs  merge.rs  snap.rs  state.rs  tree.rs
tests/common/: mod.rs
