[package]
name = "graft"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
libc = "0.2"
walkdir = "2"
similar = "2"
owo-colors = "4"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
