[package]
name = "graft"
version = "0.1.0"
edition = "2021"
description = "fork() for your project directory — instant, zero-copy workspaces using overlayfs"
license = "MIT"
repository = "https://github.com/berezovyy/graft"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
libc = "0.2"
walkdir = "2"
similar = "2"
owo-colors = "4"
time = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
serial_test = "3"
tempfile = "3"
